K8S/commands-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: prakashkmr/commandservice:latest  

---

apiVersion: v1
kind: Service
metadata:
  name: command-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
