K8S/datacatalog-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-catalog-np-service
spec:
  selector:
    app: datacatalogservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
